--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 .DS_Store
 node_modules/
-/dist/
+/build/
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
 
 # Editor directories and files
 .idea
